--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
     "react-native": "0.73.2",
     "react-native-web": "~0.19.6"
   },
