--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
+    "dayjs": "^1.11.10",
     "expo": "~50.0.2",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.7.2",
@@ -23,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
     "react-native": "0.73.2",
+    "react-native-calendars": "^1.1303.0",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-toast-message": "^2.2.0",
