--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react-icons": "^5.0.1",
     "react-native": "0.73.2",
     "react-native-calendars": "^1.1303.0",
+    "react-native-mask-input": "^1.2.3",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-toast-message": "^2.2.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "^0.19.10"
   },
